fixes alignment error caused by the last commit

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -139,21 +139,12 @@ input {
         flex-direction: column;
         justify-content: space-between;
 
-        &__empty {
-            color: $color-button-light;
-            height: 100%;
-            width: 50%;
-            text-align: center;
-            margin: 0 auto;
-        }
-
         &__list {
             overflow-y: auto;
             overflow-x: hidden;
             height: 100%;
             padding: 5px 10px;
-            display: flex;
-            align-items: center;
+            position: relative;
 
             &::-webkit-scrollbar-track {
                 -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -169,6 +160,18 @@ input {
                 border-radius: 10px;
                 background-color: $color-main--light;
             }
+        }
+
+        &__empty {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+
+            color: $color-button-light;
+            width: 50%;
+            text-align: center;
+            margin: 0 auto;
         }
 
         &__item {
